Sutter Health/src/objects/Benefit_Plan_Association__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Plan Associations</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ancillary_EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_GSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary GSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_SOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary SOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Plan_Metadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Plan Metadata</label>
        <referenceTo>Benefit_Plan_Metadata__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Share__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Cost_Share__c</formula>
        <label>Cost Share</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <formula>IF(Benefit_Plan_Metadata__r.Plan_Type__c=&apos;Custom&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Custom Plan?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOV__c</fullName>
        <formula>Benefit_Plan_Metadata__r.DOV__c</formula>
        <label>DOV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Deductible__c +&apos;/&apos;+ Benefit_Plan_Metadata__r.Ind_Family_Deductible__c +&apos;/&apos;+ Benefit_Plan_Metadata__r.Family_Deductible__c</formula>
        <label>Deductible(Indv+Indv+Family/Family)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECH_Early_Retiree__c</fullName>
        <label>ECH (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECH__c</fullName>
        <label>ECH</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Early_Retiree__c</fullName>
        <label>EC (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC__c</fullName>
        <label>EC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_1_Early_Retiree__c</fullName>
        <label>EE+1(Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_1__c</fullName>
        <label>EE+1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_2_Early_Retiree__c</fullName>
        <label>EE+2 (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_2__c</fullName>
        <label>EE+2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Early_Retiree__c</fullName>
        <label>EE (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE__c</fullName>
        <label>EE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Early_Retiree__c</fullName>
        <label>EF(Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF__c</fullName>
        <label>EF</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Emergency_Room__c</formula>
        <label>ER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Early_Retiree__c</fullName>
        <label>ES (Early Retiree)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES__c</fullName>
        <label>ES</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Year_Give_Away__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Year Give Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Inpatient__c</formula>
        <label>IP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_in_Medical_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included in Medical Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_or_Rider__c</fullName>
        <formula>IF(Raider_ID__c &lt;&gt; NULL,Raider_ID__r.Medical_OR_Rider__c,Benefit_Plan_Metadata__r.Medical_OR_Rider__c)</formula>
        <label>Medical or Rider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOPM__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Out_of_Pocket_Maximum__c+&apos;/&apos;+ Benefit_Plan_Metadata__r.Ind_Family_OOPM__c +&apos;/&apos;+ Benefit_Plan_Metadata__r.Family_OOPM__c</formula>
        <label>OOPM(Indv/Indv+Family/Family)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Outpatient__c</formula>
        <label>OP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OV__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Office_Visit__c</formula>
        <label>OV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Rate Card</label>
        <referenceTo>Rate_Card__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Benefit Plan Associations</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>IF( Raider_ID__r.Plan_Name__c != NULL, Benefit_Plan_Metadata__r.Plan_Name__c  &amp; &quot;/&quot;  &amp;  Raider_ID__r.Plan_Name__c , Benefit_Plan_Metadata__r.Plan_Name__c)</formula>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Plan_Type__c</formula>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <formula>IF( Raider_ID__c &lt;&gt; NULL , Raider_ID__r.Plan_Year__c, Benefit_Plan_Metadata__r.Plan_Year__c )</formula>
        <label>Plan Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <formula>IF(Raider_ID__c &lt;&gt; NULL,Raider_ID__r.Product_Class__c,Benefit_Plan_Metadata__r.Product_Class__c)</formula>
        <label>Product Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Product__c</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Benefit_Version__c</fullName>
        <label>Quote Benefit Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Rate Card</label>
        <referenceTo>Rate_Card__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations (Quote Rate Card)</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Benefit_Version__c</fullName>
        <label>RFP Benefit Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Incumbent_Carrier__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>RFP_Form</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Incumbent_Carrier__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Rate Card</label>
        <referenceTo>Rate_Card__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations (RFP Rate Card)</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RX_Tier_1__c</fullName>
        <formula>Benefit_Plan_Metadata__r.RX_Tier_1__c+&apos;/&apos;+ Benefit_Plan_Metadata__r.RX_Tier_2__c +&apos;/&apos;+ Benefit_Plan_Metadata__r.RX_Tier_3__c +&apos;/&apos;+ Benefit_Plan_Metadata__r.RX_Tier_4__c</formula>
        <label>RX Tier 1/2/3/4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raider_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rider Plan Name</label>
        <referenceTo>Benefit_Plan_Metadata__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations (Raider ID)</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rx_Deductible_Ind_Ind_Family_Family__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Rx_Deductible_Individual__c +&apos;/&apos;+  Benefit_Plan_Metadata__r.Rx_Deductible_Ind_Family__c  +&apos;/&apos;+  Benefit_Plan_Metadata__r.Rx_Deductible_Family__c</formula>
        <label>Rx Deductible Ind/Ind+Family/Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCN_Benefit_Version__c</fullName>
        <label>SCN Benefit Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCN_Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SCN Rate Card</label>
        <referenceTo>Rate_Card__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations (SCN Rate Card)</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOV__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Specialist_Office_Visit__c</formula>
        <label>SOV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSO_Benefit_Version__c</fullName>
        <label>SSO Benefit Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSO_Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SSO Rate Card</label>
        <referenceTo>Rate_Card__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations (SSO Rate Card)</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_Case_Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Case Notification</label>
        <referenceTo>Employer_Group_Data__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_Sign_Off__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Sign Off</label>
        <referenceTo>Sold_Sign_Off__c</referenceTo>
        <relationshipLabel>Benefit Plan Associations</relationshipLabel>
        <relationshipName>Benefit_Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Opportunity Benefit Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Limit__c</fullName>
        <formula>Benefit_Plan_Metadata__r.Visit_Limit__c</formula>
        <label>Visit Limit</label>
        <type>Text</type>
    </fields>
    <label>Benefit Plan Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Benefit_Plan_Metadata__c</columns>
        <columns>Raider_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>RFP_Form__c</columns>
        <columns>Proposal__c</columns>
        <columns>Sold_Case_Notification__c</columns>
        <columns>Sold_Sign_Off__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>1124</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Plan Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>